@@ -1,6 +1,7 @@
 # Changelog for RDF-aREF
 
 {{$NEXT}}
+  - better support RDF::Trine in Encoder
 
 0.14  2014-10-02 14:14:09 CEST
   - adjust with aREF 0.19
